groups/flowDefinitions/objects/TW1_Historico__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Data__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_da_Nota__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Data da Nota</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Fidelidade__c</fullName>
        <label>Fidelidade</label>
        <referenceTo>TW1_Fidelidade__c</referenceTo>
        <relationshipLabel>Históricos</relationshipLabel>
        <relationshipName>Hist_ricos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Externo__c</fullName>
        <externalId>true</externalId>
        <label>ID Externo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Shopping__c</fullName>
        <formula>TW1_Loja__r.TW1_ID_Shopping__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Shopping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Loja__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Loja</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Loja</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Históricos</relationshipLabel>
        <relationshipName>Hist_ricos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_NTFS__c</fullName>
        <label>NTFS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Numero_da_NTFS__c</fullName>
        <label>Número da NTFS</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TW1_Pontos__c</fullName>
        <label>Pontos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Saldo__c</fullName>
        <formula>TW1_Fidelidade__r.TW1_Saldo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Saldo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Válida</fullName>
                    <default>true</default>
                    <label>Válida</label>
                </value>
                <value>
                    <fullName>Expirada</fullName>
                </value>
                <value>
                    <fullName>Utilizada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Taca_de_vinho_hoje_del__c</fullName>
        <label>Taça de vinho hoje</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ajuste de Saldo</fullName>
                </value>
                <value>
                    <fullName>Aniversário</fullName>
                </value>
                <value>
                    <fullName>Cadastro de NTFS</fullName>
                </value>
                <value>
                    <fullName>Cartão Estacionamento</fullName>
                </value>
                <value>
                    <fullName>Saldo Inicial</fullName>
                </value>
                <value>
                    <fullName>Vinho</fullName>
                </value>
                <value>
                    <fullName>Nota Expirada</fullName>
                </value>
                <value>
                    <fullName>Ação Marketing</fullName>
                </value>
                <value>
                    <fullName>Downgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Valor_RS__c</fullName>
        <label>Valor (R$)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Histórico</label>
    <nameField>
        <displayFormat>HIST-{00000000}</displayFormat>
        <label>Código Histórico</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Históricos</pluralLabel>
    <recordTypes>
        <fullName>Acao_Marketing</fullName>
        <active>true</active>
        <label>Ação Marketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ajuste_de_Saldo</fullName>
        <active>true</active>
        <label>Ajuste de Saldo</label>
    </recordTypes>
    <recordTypes>
        <fullName>Aniversario</fullName>
        <active>true</active>
        <label>Aniversário</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cartao_Estacionamento</fullName>
        <active>true</active>
        <label>Cartão Estacionamento</label>
    </recordTypes>
    <recordTypes>
        <fullName>Downgrade</fullName>
        <active>true</active>
        <label>Downgrade</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nota_Expirada</fullName>
        <active>true</active>
        <label>Nota Expirada</label>
    </recordTypes>
    <recordTypes>
        <fullName>Saldo_Inicial</fullName>
        <active>true</active>
        <label>Saldo Inicial</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Cadastro_de_NTFS</fullName>
        <active>true</active>
        <label>Cadastro de NTFS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vinho</fullName>
        <active>true</active>
        <label>Vinho</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TW1_VR_Historico_Cliente_Platinum</fullName>
        <active>false</active>
        <description>Libera primeira taça de vinho diário grátis para clientes Platinum.</description>
        <errorConditionFormula>ISPICKVAL(TW1_Fidelidade__r.TW1_Modalidade__c ,&apos;Platinum&apos;) &amp;&amp; ISPICKVAL(TW1_Tipo__c, &apos;Vinho&apos;) &amp;&amp; TW1_Fidelidade__r.Vinhos_diarios__c &gt;=1 &amp;&amp; TW1_Saldo__c &lt; 100</errorConditionFormula>
        <errorMessage>Saldo insuficiente.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TW1_VR_Historico_Pontos_Nota_Expirada</fullName>
        <active>false</active>
        <description>Impede que o usuário altere o valos do campo &quot;Pontos&quot; do tipo de registro &quot;Nota Expirada&quot;.</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(TW1_Pontos__c) &amp;&amp; (ISPICKVAL(TW1_Tipo__c, &apos;Cadastro de NTFS&apos;)  || ISPICKVAL(TW1_Tipo__c, &apos;Nota Expirada&apos;))</errorConditionFormula>
        <errorMessage>O campo de ponto não pode ser alterado manualmente, crie um novo registro para ajustar os pontos.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TW1_VR_Historico_Valida_BonusAniversario</fullName>
        <active>false</active>
        <description>Quando o campo Bônus aniversário tiver marcado não permitirá um novo registro. O campo só será desmarcado após um ano de sua marcação.</description>
        <errorConditionFormula>ISNEW() &amp;&amp; ISPICKVAL(TW1_Tipo__c, &quot;Aniversario&quot;) &amp;&amp; TW1_Fidelidade__r.TW1_Bonus_Aniversario__c = True</errorConditionFormula>
        <errorMessage>O bônus de aniversário já foi utilizado este ano.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TW1_VR_Historico_Valida_Data_da_Nota</fullName>
        <active>false</active>
        <description>Se a nota fiscal tiver com data maior que 30 dias por regra de negócio não é possível realizar seu cadastramento.</description>
        <errorConditionFormula>ISNEW() &amp;&amp; RecordType.Name = &apos;Cadastro de NTFS&apos; &amp;&amp; (TODAY() - 30) &gt; TW1_Data_da_Nota__c</errorConditionFormula>
        <errorMessage>A data da nota não pode ser maior do que 30 dias corridos.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TW1_VR_Historico_Valida_Modalidade</fullName>
        <active>false</active>
        <description>Clientes prospect não podem usufruir de vinho e mimos de aniversários.</description>
        <errorConditionFormula>ISNEW() &amp;&amp; (ISPICKVAL(TW1_Tipo__c, &apos;Vinho&apos;) || ISPICKVAL(TW1_Tipo__c, &apos;Aniversario&apos;)) &amp;&amp; ISPICKVAL(TW1_Fidelidade__r.TW1_Modalidade__c, &apos;Prospect&apos;)</errorConditionFormula>
        <errorMessage>Somente clientes Gold ou Platinum podem usufruir desse tipo de benefício.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TW1_VR_Historico_Valida_Quant_Vinho_Gold</fullName>
        <active>false</active>
        <description>Valida a quantidade de vinhos utilizados pelo clientes Gold, não permitindo mais de uma por dia.</description>
        <errorConditionFormula>ISNEW() &amp;&amp; ISPICKVAL(TW1_Tipo__c, &quot;Vinho&quot;) &amp;&amp; ISPICKVAL(TW1_Fidelidade__r.TW1_Modalidade__c, &apos;Gold&apos;) &amp;&amp; TW1_Fidelidade__r.Vinhos_diarios__c = 1</errorConditionFormula>
        <errorMessage>Clientes de modalidade Gold só podem usufruir de uma taça de vinho por dia.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TW1_VR_Historico_Valida_Quant_Vinho_Plat</fullName>
        <active>false</active>
        <description>Valida a quantidade de vinhos utilizados pelo clientes Platinum, não permitindo mais de duas por dia.</description>
        <errorConditionFormula>ISNEW()&amp;&amp; ISPICKVAL(TW1_Tipo__c, &quot;Vinho&quot;) &amp;&amp; ISPICKVAL(TW1_Fidelidade__r.TW1_Modalidade__c, &apos;Platinum&apos;) &amp;&amp; TW1_Fidelidade__r.Vinhos_diarios__c = 2</errorConditionFormula>
        <errorMessage>Clientes de modalidade Platinum só podem usufruir de duas taças de vinho por dia.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TW1_VR_Historico_Valida_Saldo</fullName>
        <active>false</active>
        <description>Quando um novo registro do tipo Vinho é criado a regra valida se o cliente tem saldo suficiente.</description>
        <errorConditionFormula>ISNEW() &amp;&amp; ISPICKVAL(TW1_Tipo__c, &apos;Vinho&apos;) &amp;&amp; TW1_Saldo__c &lt; 100 &amp;&amp; ISPICKVAL(TW1_Fidelidade__r.TW1_Modalidade__c, &apos;Gold&apos;)</errorConditionFormula>
        <errorMessage>Saldo insuficiente.</errorMessage>
    </validationRules>
</CustomObject>